# people_console

./: .gitignore  Cargo.toml  config.yaml
src/: bd_manager.rs  cmd_manager.rs  main.rs  storage.rs  ui.rs  yaml_bd.rs
