[package]
name = "person_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
serde_yaml = "0.9.28"
serde_json = "1.0.113"
chrono = "0.4.33"
rand = "0.3"